# python-extension-demo

./: .mise.toml  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
src/python_extension_demo/: morpheusz2.cpp
